# AnyPyTools

./: .binstar.yml  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  build_installer.bat  environment.yml  install_locally.bat  pixi.toml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  test_abcutils.py  upload.env
.github/workflows/: build.yml  docs.yaml  test.yml
Tutorial/: 00 AnyPyTools tutorial.ipynb  00_AnyPyTools_tutorial.ipynb  00_Install_and_setup.ipynb  01 - Getting started with anypytools.ipynb  01_Getting_started_with_anypytools.ipynb  02 - Generating macros.ipynb  02_Generating_macros-New.ipynb  02_Generating_macros.ipynb  03 - Working with output from Anybody.ipynb  03_Working_with_output_from_Anybody.ipynb  04 - Batch processing many model.ipynb  04_Batch_processing_multiple_models.ipynb  05 - Monte Carlo studies etc.ipynb  05_Monte_Carlo_studies_etc.ipynb  06_Tips&Tricks.ipynb  AnyPyTools_Tutorial.ipynb  Knee.any  new type macros.ipynb  output.anydata.h5
Tutorial/SimpleMacroExample/: TestOutput_nstep_10.csv  TestOutput_nstep_110.csv  TestOutput_nstep_120.csv  TestOutput_nstep_40.csv  TestOutput_nstep_50.csv  TestOutput_nstep_60.csv  TestOutput_nstep_70.csv  TestOutput_nstep_90.csv  python_parameter.py
anypytools/: __init__.py  abcutils.py  blaze_converter.py  datautils.py  foot_floor_contact.py  h5py_wrapper.py  jobpopen.py  macro_commands.py  macroutils.py  pytest_plugin.py  tools.py
anypytools/pygments_plugin/: __init__.py  anyscript_lexer.py  anyscript_style.py  functions.txt  options.txt  statements.txt
anypytools/utils/: __init__.py
conda build/: bld.bat  build.sh  menu-windows_manual.json  meta.yaml
conda.recipe/: AnyPyToolsTutorial.bat  bld.bat  build.sh  menu-windows-manual.json  meta.yaml
docs/: Makefile  api.md  changelog.md  conf.py  dependencies.md  dependencies.rst  devguide.md  environment.yml  index.md  index.rst  install_guide.md  install_guide.rst  make.bat  modules.rst  pytest-plugin.md  pytest_plugin.md  pytest_plugin.rst
docs/Tutorial/: 00_AnyPyTools_tutorial.ipynb  00_Install_and_setup.ipynb  01_Getting_started_with_anypytools.ipynb  02_Generating_macros.ipynb  03_Working_with_output_from_Anybody.ipynb  04_Batch_processing_multiple_models.ipynb  05_Monte_Carlo_studies_etc.ipynb  06_Tips&Tricks.ipynb  Knee.any  output.anydata.h5
docs/api/: AnyMacro.md  AnyMacro.rst  AnyPyProcess.md  AnyPyProcess.rst  abcutils.md  abcutils.rst  anydatah5_generator.md  anydatah5_generator.rst  anyoutputfile_generator.md  anyoutputfile_generator.rst  anypytools.h5py_wrapper.rst  (+17 more)
slides/: Automate your AnyBody simulations.ipynb  notebook.bat
tests/: conftest.py  test_Arm2D.any  test_Arm2D_no_runtest.any  test_abcutils.py  test_datautils.py  test_h5py_wrapper.py  test_hdf5.py  test_macros.py  test_tools.py
(+87 files in other folders)
