[build-system]

requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anypytools"
authors=[{name="Morten Enemark Lund", email="melund@gmail.com"}]
description = "Python tools and utilities for working with the AnyBody Modeling System"
readme = "README.md"
keywords = ["AnyBody Modeling System", "AnyScript"]
license = {file = "LICENSE.txt"}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Pytest",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.7"
dependencies = ["numpy", "scipy", "tqdm"]

[project.optional-dependencies]
full=[
    "h5py",
    "jupyter",
    "matplotlib",
    "pydoe",
    "pandas",
    "ipywidgets",
    "pytest",
]

[project.urls]
Homepage = "https://anybody-research-group.github.io/anypytools-docs/"
Code = "https://github.com/AnyBody-Research-Group/AnyPyTools"

[project.entry-points.pytest11]
anypytools = "anypytools.pytest_plugin"

[tool.setuptools.dynamic]
version = {attr = "anypytools.__version__"}

[tool.setuptools.packages.find]
exclude = ["docs", "tests"] 
