[build-system]

requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "anypytools"
authors=[{name="Morten Enemark Lund", email="melund@gmail.com"}]
description = "Python tools and utilities for working with the AnyBody Modeling System"
readme = "README.md"
keywords = ["AnyBody Modeling System", "AnyScript"]
license = "MIT"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pytest",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "rich", "pywin32; platform_system == 'Windows'"]

[project.optional-dependencies]
full=[
    "h5py",
    "jupyter",
    "matplotlib",
    "pydoe",
    "pandas",
    "ipywidgets",
    "pytest",
]

[project.urls]
Homepage = "https://anybody-research-group.github.io/anypytools-docs/"
Code = "https://github.com/AnyBody-Research-Group/AnyPyTools"
Documentation = "https://anybody-research-group.github.io/anypytools-docs/"

[project.entry-points."pytest11"]
anypytools = "anypytools.pytest_plugin"
